Fixing root route and aded basic links

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,6 @@
 <h1> Welcome to the Trip Builder App </h1>
 
   
-<td><%= link_to 'Login', new_user_session_path %>  
- 
+<td><%= link_to 'Login', new_user_session_path %> </td>>  
+<td><%= link_to 'New', new_trip_path %> </td>  
+<td><%= link_to 'Back', trips_path %> </td> 
