--- a/app/views/trips/new.html.erb
+++ b/app/views/trips/new.html.erb
@@ -8,6 +8,10 @@
 <% end %>
 
 
+<h1> ******* TripBuilder! ******** </h1>
+<h2> Create a new trip </h2>
+
+
 <%= form_for(@trip) do |f| %>
 	<div class "field">
 	<%= f.label :name %><br>
