--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -1,3 +1,41 @@
-<h1><%= @trip.name %></h1>
+
+
+
+<h1> ******* TripBuilder! ******** </h1>
+<h2> Search Results</h2>
+
+<table>
+  <thead>
+    <tr>
+    <div>
+      <th><h3>Trip Name</h3></th>
+      <th><h3>Theme</h3></th>
+      <th><h3>Description</h3></th>
+      <th><h3>Region</h3></th>
+      <th><h3>Start</h3></th>
+      <th><h3>End</h3></th>
+    </div>
+    </tr>
+  </thead>
+
+ <tbody>
+ <tr> 
+  <% @trip.each do |m| %>
+   <td><%= m.name %> </td>
+   <td><%= m.theme %>  </td>
+   <td><%= m.description %>  </td>
+   <td><%= m.region %>  </td>
+   <td><%= m.start%>  </td>
+   <td><%= m.end %>  </td>
+   </tr>
+   <% end %>
+</tbody>
+</table>
+   
+<div>
+<td><%= link_to 'New', new_trip_path %>  
+ <%= link_to 'Back', trips_path %> </td>
+</div>
+  
 
 
