Added New Components Page and additional Nav links

--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -40,6 +40,9 @@
    
 <div>
 <td><%= link_to 'New', new_trip_path %>  
- <%= link_to 'Back', trips_path %> </td>
+ <%= link_to 'Back', trips_path %> 
+ <%= link_to 'Components', components_path %>
+ <%= link_to 'Add Components', new_component_path %>
+ </td>
 </div>
   
