--- a/app/views/trips/new.html.erb
+++ b/app/views/trips/new.html.erb
@@ -46,4 +46,10 @@
 	<%= f.submit %>
 	<% end %>
 	
-<td><%= link_to 'Home', trips_path %>  
+<td>
+ <%= link_to 'Trips', trips_path %>  
+ <%= link_to 'Components', components_path %>
+ <%= link_to 'Add Components', new_component_path %>
+</td>
+
+
