--- a/app/views/components/show.html.erb
+++ b/app/views/components/show.html.erb
@@ -1,45 +1,42 @@
 
 
-
 <h1> ******* TripBuilder! ******** </h1>
-<h2> Search Results </h2>
+<h2> Component Search Results </h2>
+
 
 <table>
   <thead>
     <tr>
     <div>
-      <th><h3>Trip Name</h3></th>
-      <th><h3>Theme</h3></th>
+      <th><h3>Component Name</h3></th>
       <th><h3>Description</h3></th>
-      <th><h3>Region</h3></th>
       <th><h3>Start</h3></th>
       <th><h3>End</h3></th>
+      <th><h3>Latitude</h3></th> 
+      <th><h3>Longitude</h3></th>
+
     </div>
     </tr>
   </thead>
 
  <tbody>
  <tr> 
-  <% @trip.each do |m| %>
+  <% @component.each do |m| %>
    <td><%= m.name %> </td>
-   <td><%= m.theme %>  </td>
    <td><%= m.description %>  </td>
-   <td><%= m.region %>  </td>
    <td><%= m.start%>  </td>
    <td><%= m.end %>  </td>
+   <td><%= m.lat%>  </td>
+   <td><%= m.lon%>  </td>
    </tr>
    <% end %>
 </tbody>
 </table>
    
 <div>
-<td>
- <%= link_to 'New', new_trip_path %>  
- <%= link_to 'Back', trips_path %> 
- <%= link_to 'Components', components_path %>
- <%= link_to 'Add Components', new_components_path %>
-</td>
+<td><%= link_to 'New', new_component_path %>  
+ <%= link_to 'Back', components_path %>
+ <%= link_to 'Trips' , trips_path %>
+ </td>
 </div>
   
-
-
