--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -4,44 +4,15 @@
 <h1> ******* Welcome to TripBuilder! ******** </h1>
 <h2> Current Trips </h2>
 
-<%= form_tag "/trips/show", method: "GET" do %>
+<%= form_tag "trips", method: "GET" do %>
     <%= text_field_tag :p, params[:p] %>
   <%= submit_tag "Search Trips" %>
 <% end %>
 
-
-<table>
-  <thead>
-    <tr>
-    <div>
-      <th><h3>Trip Name</h3></th>
-      <th><h3>Theme</h3></th>
-      <th><h3>Description</h3></th>
-      <th><h3>Region</h3></th>
-      <th><h3>Start</h3></th>
-      <th><h3>End</h3></th>
-    </div>
-    </tr>
-  </thead>
-
- <tbody>
- <tr> 
-  <% @trip.each do |m| %>
-   <td><%= m.name %> </td>
-   <td><%= m.theme %>  </td>
-   <td><%= m.description %>  </td>
-   <td><%= m.region %>  </td>
-   <td><%= m.start%>  </td>
-   <td><%= m.end %>  </td>
-   </tr>
-   <% end %>
-</tbody>
-</table>
    
 <div>
 <td><%= link_to 'New', new_trip_path %>  
  <%= link_to 'Back', trips_path %> 
- <%= link_to 'Components', components_path %>
  <%= link_to 'Add Components', new_component_path %>
  </td>
 </div>
