--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -27,6 +27,8 @@
    <td><%= m.region %>  </td>
    <td><%= m.start%>  </td>
    <td><%= m.end %>  </td>
+   <td><%= m.id %>  </td> 
+   <td><%= link_to 'Edit Trip', edit_trip_path(["#{m.id}"]) %> </td>
    </tr>
    <% end %>
 </tbody>
@@ -35,9 +37,10 @@
 <div>
 <td>
  <%= link_to 'New', new_trip_path %>  
- <%= link_to 'Back', trips_path %> 
+ <%= link_to 'Back', trips_path %>  
+ 
  <%= link_to 'Components', components_path %>
- <%= link_to 'Add Components', new_components_path %>
+ <%= link_to 'Add Components', new_component_path %>
 </td>
 </div>
   
