--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -40,7 +40,7 @@
    
 <div>
 <td><%= link_to 'New', new_trip_path %>  
- <%= link_to 'Back', trips_path %> 
+ <%= link_to 'Trips', trips_path %> 
  <%= link_to 'Add Components', new_component_path %>
  </td>
 </div>
