--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,7 @@
 <h1> Welcome to the Trip Builder App </h1>
 
 
-<table>
+<table class="table table-striped" >
   <thead>
     <tr>
     <div>
@@ -29,7 +29,7 @@
 </tbody>
 </table>
    
-<table>
+<table class="table table-striped" >
   <thead>
     <tr>
     <div>
