--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -4,7 +4,7 @@
 <h1> ******* TripBuilder! ******** </h1>
 <h2> Search Results </h2>
 
-<table>
+<table class="table table-hover" >
   <thead>
     <tr>
     <div>
@@ -21,13 +21,12 @@
  <tbody>
  <tr> 
   <% @trip.each do |m| %>
-   <td><%= m.name %> </td>
-   <td><%= m.theme %>  </td>
-   <td><%= m.description %>  </td>
-   <td><%= m.region %>  </td>
-   <td><%= m.start%>  </td>
-   <td><%= m.end %>  </td>
-   <td><%= m.id %>  </td> 
+   <td class="active"> <%= m.name %> </td>
+   <td class="active"> <%= m.theme %>  </td>
+   <td class="active"> <%= m.description %>  </td>
+   <td class="active"> <%= m.region %>  </td>
+   <td class="active"> <time><%= m.start %></time></td>
+   <td class="active"> <time><%= m.end %></time> </td>
    <td><%= link_to 'Edit Trip', edit_trip_path(["#{m.id}"]) %> </td>
    </tr>
    <% end %>
